2024-08-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha03: Swim, Rick, Swim!';git push
	git tag -a 5.2.8-alpha03 -m '';git push --tags

	* ncclimo: Add --sum_scl option for global sum timeseries

2024-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha02: Clean Subaru';git push
	git tag -a 5.2.8-alpha02 -m 'all: NCO_MAX_CHUNK_SIZE HINT, WARNING; ncatted/ncrename: fl_fmt msg, NC_STRING; ncclimo: --rgn_stt=sum; ncks --chk_map fix area_b dgn';git push --tags

	* ncclimo: Pass flg_sum not rgn_stt to cmd_rgn. Workaround ncap2 syntax errors. Confirm BFB with old avg procedure.

	* ncclimo: Implement --rgn_stt. Make --rgn_avg a synonym for --rgn_stt=avg. Implement --rgn_avg=ttl.

2024-08-21  Charlie Zender  <zender@uci.edu>

	* nco_cnk_sz_set_trv(): Kludgy adjustment to maximum chunk length, add WARNING

	* nco_def_var_chunking(): Add HINT

2024-08-11  Charlie Zender  <zender@uci.edu>

	* ncatted and ncrename now explain (then exit) when user specifies output file type

	* Improve WARNING when ncatted and ncrename will not modify NC_STRING history attributes

2024-08-09  Charlie Zender  <zender@uci.edu>

	* Revert nco_hst_att_cat() NC_STRING feature for ncatted/ncrename (fail at nc_enddef()/nc_close() stage)

	* Print correct label and location for new grid diagnostics for area_b in nco_map_chk()

	* NCO 5.2.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8-alpha01: Kia';git push
	git tag -a 5.2.8-alpha01 -m 'Functionally identical to 5.2.7 and supports NC_STRING history attribute';git push --tags

	* Modify nco_hst_att_cat() to write/append an NC_STRING history attribute

2024-08-08  Charlie Zender  <zender@uci.edu>

	* nco_c++ nco_att.hh address two CEWI warnings

2024-07-24  Charlie Zender  <zender@uci.edu>

	* Rudimentary version of CAAS algorithm primitives works with CAAS arrays
